--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
       <p><strong>Address 1:</strong> 15 A Topearl Avenue, off 175 Abuloma Road, Port Harcourt</p>
       <p><strong>Address 2:</strong> 91 D Rumuola Road, Behind Ebony Hospital, Port Harcourt</p>
       <p><strong>Phone:</strong> 08023071442, 08034181879, 07054296158</p>
-      <p><strong>Email:</strong> info@cliftokglobalng.com </p>
+      <p><strong>Email:</strong> cliftokglobal@gmail.com </p>
     </div>
   </section>
 
